test(index): Add characterization test case for BigDecimal indexing